<resources>
    <string name="app_name">Recipe-Queue</string>

    <string name="activity_favorites_title">Favorite Recipes</string>
    <string name="activity_history_title">Search History</string>
    <string name="activity_list_title">List</string>
    <string name="activity_recipe_title">Recipe Details</string>
    <string name="activity_results_title">Search Results</string>
    <string name="activity_search_title">Search Criteria</string>

    <string name="btn_show_favorites">Show Favorites</string>
    <string name="btn_show_history">60 Minute Cache</string>
    <string name="btn_show_joke">Display Joke</string>
    <string name="btn_show_list">Shopping List</string>
    <string name="btn_show_search">Start Search</string>
    <string name="btn_execute_search">Launch Search</string>
    <string name="btn_recipe_search_for_similar">Find Similar</string>
    <string name="btn_recipe_goto_original_source">See Original</string>
    <string name="btn_recipe_send_to_list">Send to List</string>
    <string name="btn_recipe_open_list">Open List</string>

    <string name="joke_caution">Caution: Returned jokes may contain mature content!</string>

    <string name="switch_search_common">Common</string>
    <string name="switch_search_nutrition">Nutrition</string>
    <string name="switch_search_ingredient">Ingredient</string>

    <string name="list_label_sought">In Progress</string>
    <string name="list_label_found">Completed</string>
    <string name="list_item_name">%1$s &#8212;</string>
    <string name="list_item_quantity">%1$s</string>
    <string name="list_item_origin">(%1$s)</string>
    <string name="list_item_unit">%1$s</string>

    <string name="action_delete_all">Clear All Lists</string>
    <string name="action_delete_found">Clear Completed</string>
    <string name="action_delete_list">Clear List</string>
    <string name="action_delete_selected">Remove Selected</string>
    <string name="action_delete_sought">Clear In Progress</string>

    <string name="empty"/>
    <string name="summary_include">Include: %1$s</string>
    <string name="summary_exclude">Exclude: %1$s</string>
    <string name="summary_intolerance">Intolerances: %1$s</string>
    <string name="summary_no">No</string>
    <string name="summary_yes">Yes</string>

    <string name="dialog_title_3_way">[&#160;-&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;+&#160;]&#160;&#160;&#160;&#160;%1$s</string>
    <string name="dialog_btn_positive">OK</string>
    <string name="dialog_btn_negative">Cancel</string>

    <string name="search_common_selection_list">%1$s</string>
    <string name="search_common_selection_any">Any</string>
    <string name="search_common_selection_none">None</string>

    <string name="search_common_cuisine_title">Cuisine</string>
    <string name="search_common_diet_title">Diet</string>
    <string name="search_common_meal_type_title">Meal Type</string>
    <string name="search_common_require_instructions_title">Require Instructions</string>

    <string name="search_ingredient_intolerance_title">Intolerances</string>
    <string name="search_ingredient_ingredient_title">Ingredients</string>
    <string name="search_ingredient_ignore_pantry_title">Ignore Pantry Ingredients</string>

    <string name="search_nutrient_auto_fill_min">10</string>
    <string name="search_nutrient_auto_fill_max">90</string>
    <string name="search_nutrient_default_min">0</string>
    <string name="search_nutrient_default_max">0</string>

    <string name="search_nutrient_unit_grams">g</string>
    <string name="search_nutrient_unit_milli_grams">mg</string>
    <string name="search_nutrient_unit_micro_grams">\u00b5g</string>
    <string name="search_nutrient_unit_international_units">IU</string>
    <string name="search_nutrient_unit_calories">calories</string>

    <string name="min_max_label_minimum">Minimum</string>
    <string name="min_max_label_maximum">Maximum</string>
    <string name="min_max_default_minimum">0</string>
    <string name="min_max_default_maximum"/>

    <string name="min_max_summary_restrict_completely">No amount</string>
    <string name="min_max_summary_restrict_min">At least %1$d %2$s</string>
    <string name="min_max_summary_restrict_max">At most %1$d %2$s</string>
    <string name="min_max_summary_restrict_same">Exactly %1$d %2$s</string>
    <string name="min_max_summary_restrict_both">Between %1$d and %2$d %3$s</string>
    <string name="min_max_summary_no_restriction">Any amount</string>

    <string name="search_nutrient_alcohol_title">Alcohol</string>
    <string name="search_nutrient_caffeine_title">Caffeine</string>
    <string name="search_nutrient_calcium_title">Calcium</string>
    <string name="search_nutrient_calories_title">Calories</string>
    <string name="search_nutrient_carbohydrates_title">Carbohydrates</string>
    <string name="search_nutrient_cholesterol_title">Cholesterol</string>
    <string name="search_nutrient_choline_title">Choline</string>
    <string name="search_nutrient_copper_title">Copper</string>
    <string name="search_nutrient_fat_title">Fat</string>
    <string name="search_nutrient_fiber_title">Fiber</string>
    <string name="search_nutrient_fluoride_title">Fluoride</string>
    <string name="search_nutrient_folate_title">Folate</string>
    <string name="search_nutrient_folic_acid_title">Folic Acid</string>
    <string name="search_nutrient_iodine_title">Iodine</string>
    <string name="search_nutrient_iron_title">Iron</string>
    <string name="search_nutrient_magnesium_title">Magnesium</string>
    <string name="search_nutrient_manganese_title">Manganese</string>
    <string name="search_nutrient_phosphorous_title">Phosphorous</string>
    <string name="search_nutrient_potassium_title">Potassium</string>
    <string name="search_nutrient_protein_title">Protein</string>
    <string name="search_nutrient_saturated_fat_title">Saturated Fat</string>
    <string name="search_nutrient_selenium_title">Selenium</string>
    <string name="search_nutrient_sodium_title">Sodium</string>
    <string name="search_nutrient_sugar_title">Sugar</string>
    <string name="search_nutrient_vitamin_a_title">Vitamin A</string>
    <string name="search_nutrient_vitamin_b01_title">Vitamin B1</string>
    <string name="search_nutrient_vitamin_b02_title">Vitamin B2</string>
    <string name="search_nutrient_vitamin_b03_title">Vitamin B3</string>
    <string name="search_nutrient_vitamin_b05_title">Vitamin B5</string>
    <string name="search_nutrient_vitamin_b06_title">Vitamin B6</string>
    <string name="search_nutrient_vitamin_b12_title">Vitamin B12</string>
    <string name="search_nutrient_vitamin_c_title">Vitamin C</string>
    <string name="search_nutrient_vitamin_d_title">Vitamin D</string>
    <string name="search_nutrient_vitamin_e_title">Vitamin E</string>
    <string name="search_nutrient_vitamin_k_title">Vitamin K</string>
    <string name="search_nutrient_zinc_title">Zinc</string>

    <string name="item_grid_image_description">Recipe Image</string>
    <string name="icon_favorite_description">Remember This Recipe</string>
    <string name="ingredient_description">Ingredient Image</string>

    <string name="recipe_servings_label">Servings:</string>
    <string name="recipe_ready_in_label">Minutes Estimate:</string>
    <string name="recipe_ingredients_label">Ingredients:</string>
    <string name="recipe_ingredient_amount">%1$.2f %2$s</string>
    <string name="recipe_directions_label">Directions:</string>
    <string name="recipe_directions_instruction">%1$d.&#160;&#160;%2$s</string>

    <string name="widget_title">Todo List</string>
    <string name="widget_todo_empty">Nothing more to do! List empty!</string>

    <string name="notify_firebase_channel_id">MessageFromFirebase</string>
    <string name="notify_firebase_recipe_received_title">You have received a recipe recommendation!</string>
    <string name="notify_firebase_recipe_received_body"/>

    <string name="context_pushed_image">Recipe Suggestion</string>
    <string name="context_focus_scrim">Selected Item</string>

    <string name="error_failure_internet">Internet not connected!</string>
    <string name="error_retry_joke_information">RETRY DETAILS</string>
    <string name="error_retry_joke_retrieval">RETRY JOKE</string>
    <string name="error_retry_joke_search">RETRY SEARCH</string>
    <string name="error_retry_joke_similar">RETRY SIMILAR</string>
</resources>
