<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.example.recipe_q.custom.ControlMinMax
            android:id="@+id/mm_alcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:criteriaTitle="@string/search_nutrient_alcohol_title"
            app:criteriaUnit="@string/search_nutrient_unit_grams"
            app:labelMaximum="@string/min_max_label_maximum"
            app:labelMinimum="@string/min_max_label_minimum"
            app:valueMaximum="@string/min_max_default_maximum"
            app:valueMinimum="@string/min_max_default_minimum" />

    </LinearLayout>

</ScrollView>