<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.example.recipe_q.custom.ControlMultiSelect
            android:id="@+id/custom_intolerance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:criteriaTitle="@string/search_ingredient_intolerance_title"
            app:criteriaSummary="@string/summary_intolerance"
            app:criteriaItems="@array/search_common_intolerances" />

        <com.example.recipe_q.custom.Control3WaySelect
            android:id="@+id/custom_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:criteriaTitle="@string/search_ingredient_ingredient_title"
            app:criteriaIncluded="@string/search_common_selection_any"
            app:criteriaExcluded="@string/search_common_selection_none"
            app:criteriaItems="@array/search_ingredients" />

        <com.example.recipe_q.custom.ControlSwitch
            android:id="@+id/switch_ignore_pantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summaryCheckOff="@string/summary_no"
            app:summaryCheckOn="@string/summary_yes"
            app:criteriaTitle="@string/search_ingredient_ignore_pantry_title"
            app:criteriaChecked="false" />

    </LinearLayout>

</ScrollView>
